--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -79,12 +79,11 @@ nav {
   background: #177246de;
 
 }
-/* @supports ((position:sticky) or (position:-webkit-sticky)){
-	.nav{
-		position: -webkit-sticky;
-		position: sticky;
-	}
-} */
+.fics{
+  width: 100%;
+  height: 80px;
+  opacity: 0;
+}
 #smart_button,
 #smart_button_sub,
 #smar_menu
@@ -234,15 +233,14 @@ nav ul li a,
 .specification,
 .contraindications{
   display: none;
-  margin: 20px;
-  padding: 10px;
-  font-size: 20px;
+  padding: 0 10px;
+  font-size: 23px;
 }
-#discription_bottum:checked~#tab-1,
+/* #discription_bottum:checked~#tab-1,
 #specification_bottum:checked~#tab-2,
 #contraindications_bottum:checked~#tab-3{
   
-}
+} */
 
 #discription_bottum:checked~.discription,
 #specification_bottum:checked~.specification,
@@ -254,15 +252,13 @@ nav ul li a,
   flex-direction: column;
   justify-content: center;
   flex-flow: column;
-  margin-bottom: 10px;
-  
 }
 #discription_bottum:checked~.discription,
 #specification_bottum:checked~.specification{
-  padding: 10px 20px;
+  padding: 0px 20px;
 }
 #contraindications_bottum:checked~.contraindications{
-  padding-left: 15%;
+  padding: 10px;
 }
 .produkt_arow,
 .qvetion_title{
@@ -301,7 +297,9 @@ transform: rotate(45deg) ;
   text-align: center;
   margin: 5% 0;
 }
-.discription>p{
+.discription>ul,
+.specification>ul,
+.contraindications>p{
   padding-bottom: 100px;
 }
 .articl_page_wrapper{
@@ -400,7 +398,7 @@ transform: rotate(45deg) ;
   display: block;
   position: absolute;
   top: -55px;
-  border: 1px solid #000;
+  border: 1px solid #177246de;
 }
 #tab-1
 {
@@ -413,6 +411,12 @@ transform: rotate(45deg) ;
 #tab-3
 {
   grid-column: 10/15;
+}
+#tab-3:hover>h4,
+#tab-2:hover>h4,
+#tab-1:hover>h4{
+  font-size: 120%;
+  transform: translate(3000ms);
 }
 .contraindications,
 .specification,
@@ -470,6 +474,9 @@ footer>a>img{
     position: inherit;
     background: inherit;
   }
+  .top_desription{
+    margin-top: 20px;
+  }
   nav ul li a,
   .sub_nav li a {
   height: 100%;
@@ -477,12 +484,12 @@ footer>a>img{
 }
   nav,
   .contakt_conteiner {
-    position: relative;
     flex-direction: column;
   }
   .carusel_item>h2{
-    margin-top: -35px;
+    margin-top: 5px;
     padding-left: 50px; 
+    text-shadow: 0 0 15px #e7e6e6;
   }
   nav ul,
   .produkt_conteiner {
@@ -509,14 +516,16 @@ footer>a>img{
     text-align: center;
     padding-bottom: 10px;
 }
-nav{
-    position: relative;
+#smart_button:checked~label{
+  color: #e8eaff;
 }
+
 nav>ul{
     display: none;
 }
 #smart_button:checked~ul,
 #smart_button_sub:checked~.sub_nav{
+    position: relative;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -538,9 +547,10 @@ nav>ul{
 #tab-1{
   grid-column: 1/15;
   position: inherit;
-  margin-top: 25px;
+  margin-top: 45px;
 }
 
 
 
 }
+
