--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,12 +11,14 @@ body,
 #___gatsby,
 #gatsby-focus-wrapper {
   height: 100%;
-  max-width: 1400px;
+  max-width: 1450px;
   margin: 0px auto;
   /* background-color: #fcfdfb; */
   -webkit-text-size-adjust: none;
 }
-
+h1{
+  text-align: center;
+}
 #gatsby-focus-wrapper {
   display: flex;
   flex-direction: column;
@@ -77,11 +79,12 @@ nav {
   display: flex;
   justify-content: center;
   background: #177246de;
+  max-width: 1450px;
 
 }
 .fics{
   width: 100%;
-  height: 80px;
+  height: 70px;
   opacity: 0;
 }
 #smart_button,
@@ -233,7 +236,7 @@ nav ul li a,
 .specification,
 .contraindications{
   display: none;
-  padding: 0 10px;
+  padding: 20px 10px;
   font-size: 23px;
 }
 /* #discription_bottum:checked~#tab-1,
@@ -248,7 +251,7 @@ nav ul li a,
 {
   display:flex;
   padding: 0;
-  margin: 0;
+  margin: 10px 10px;
   flex-direction: column;
   justify-content: center;
   flex-flow: column;
@@ -390,7 +393,10 @@ transform: rotate(45deg) ;
   grid-column-gap: 0;
   grid-template-columns: 1fr repeat(12,1fr) 1fr;
   position: relative;
+  margin: 45px 0;
 }
+
+
 #tab-3,
 #tab-2,
 #tab-1{
@@ -423,6 +429,10 @@ transform: rotate(45deg) ;
 .discription{
   grid-column: 1/15;
 }
+.contraindicationsul,
+.specification>ul{
+  margin: 40px auto
+}
 
 .produkt_page_title{
   text-align: center;
@@ -436,6 +446,11 @@ transform: rotate(45deg) ;
 }
 .adress{
   border-right: 1px solid #177246;
+}
+.tel{
+}
+.tel_icons{
+  height: 25px;
 }
 
 .google_map{
